--- a/src/app/diary-detail/diary-detail.component.html
+++ b/src/app/diary-detail/diary-detail.component.html
@@ -1,2 +1,3 @@
 <p>{{diary.description}}</p>
-<button (click)= 'diaryComplete(true)'>Complete</button>
+<p>This diary will be complete in {{diary.completeDate|dateCount}} days</p>
+<button (click)= 'diaryDelete(true)' class="btn btn-outline-danger">Delete Diary</button>
