--- a/src/app/diary-form/diary-form.component.html
+++ b/src/app/diary-form/diary-form.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
     <h2 class="text-center">Create a new Diary</h2>
+    <form (ngSubmit)='submitGoal()' #goalForm='ngForm'></form>
     <hr>
     <form #diaryForm='ngForm'>
         <div class="form-group">
