--- a/src/app/diary-form/diary-form.component.html
+++ b/src/app/diary-form/diary-form.component.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
     <h2 class="text-center">Create a new Diary</h2>
-    <form (ngSubmit)='submitGoal()' #goalForm='ngForm'></form>
     <hr>
-    <form #diaryForm='ngForm'>
+    <form (ngSubmit)='submitDiary()' >
         <div class="form-group">
   
             <label for="name">Name</label>
@@ -14,7 +13,7 @@
         <div class="form-group">
   
             <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="4" [(ngModel)]="newGoal.description" name="description" #description="ngModel" required></textarea>
+            <textarea class="form-control" id="description" rows="4" [(ngModel)]="newDiary.description" name="description" #description="ngModel" required></textarea>
             <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
               <p>Description is required</p>
             </div>
