fix delete diary item bug

--- a/src/app/diary-detail/diary-detail.component.html
+++ b/src/app/diary-detail/diary-detail.component.html
@@ -1,4 +1,4 @@
 
 <p>{{diary.description}}</p>
 <p>This diary will be complete in {{diary.completeDate|dateCount}} days</p>
-<button (click)= 'diaryDelete(true)' class="btn btn-outline-danger">Delete Diary</button>
+<button (click)= 'diaryComplete(true)' class="btn btn-outline-danger">Delete Diary</button>
